added other errors

--- a/employee_management/templates/errors/404.html
+++ b/employee_management/templates/errors/404.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>
-        OK MELIK A MESS UP :(
-                INTERNAL ERROR (500)
+        The page you are trying to access does not exist, object has probably been deleted
     </h1>
 </body>
 </html>
