--- a/employee_management/templates/employee_management/location_home.html
+++ b/employee_management/templates/employee_management/location_home.html
@@ -142,7 +142,7 @@
                 'copy',
                 {
                     extend: 'excelHtml5',
-                    title: 'excel_backup_"{{week.1.0.0}}"',
+                    title: "{{ filename }}",
                     exportOptions: {
                         columns: ':visible'
                     }
@@ -151,7 +151,7 @@
                     extend: 'pdfHtml5',
                     orientation: 'landscape',
                     pageSize: 'LEGAL',
-                    title: 'pdf_backup_{{week.1.0.0}}',
+                    title: '"{{ filename }}"',
                     exportOptions: {
                         columns: ':visible'
                     }
@@ -159,7 +159,7 @@
                 {
                     extend: 'print',
                     text: 'Print',
-                    title: 'print_{{week.1.0.0}}',
+                    title: '"{{ filename }}"',
                     exportOptions: {
                         modifier: {
                             selected: null,
