added dev branch

--- a/employee_management/templates/employee_management/view_logs.html
+++ b/employee_management/templates/employee_management/view_logs.html
@@ -1,5 +1,5 @@
-{% extends "employee_management_dev/base_location_2.html" %}
-{% load tags_extra_dev %}
+{% extends "employee_management/base_location_2.html" %}
+{% load tags_extra %}
 
 {% block content %}
 
