--- a/employee_management/templates/employee_management/home.html
+++ b/employee_management/templates/employee_management/home.html
@@ -66,7 +66,7 @@
                         Edit
                     </a>
 
-                    <a
+                    <a onclick="return confirm('Are you sure you want to delete this?')"
                     href="{% url 'delete-employee' item.id %}" class="btn btn-danger">
                         Delete
                     </a>
