--- a/employee_management/templates/errors/404.html
+++ b/employee_management/templates/errors/404.html
@@ -10,5 +10,11 @@
     <h1>
         The page you are trying to access does not exist, object has probably been deleted
     </h1>
+    <a href="/employee_management">
+        <button>
+
+            Go back home
+        </button>
+    </a>
 </body>
 </html>
