--- a/employee_management/templates/employee_management/view_logs.html
+++ b/employee_management/templates/employee_management/view_logs.html
@@ -72,7 +72,7 @@
 </div>
 
 
-{% if request.session.alert == alert%}
+<!-- {% if request.session.alert == alert%}
 <script type="text/javascript">
     window.onload = function() {
         alert('Undo location before undoing calendar');
@@ -87,7 +87,7 @@
         alert('Undo location before undoing employee');
     }
 </script>
-{% endif %}
+{% endif %} -->
 
 
 {% endblock %}
